# SDK-Linux

./: README.md
demo/: CMakeLists.txt  Indem.cpp
demo/plugin/: CMakeLists.txt
demo/plugin/include/: seethrough.h
demo/plugin/src/: seethrough.cpp
demo/sdk/: Indem.cpp  test.cpp
demo1/: CMakeLists.txt  Indem.cpp  README.md  imrsdk.h
include/: imrdata.h  imrsdk.h
include/plugin/: AlgorithmPlugin.h  SlamPlugin.h
lib/: Stereoeuroc_xiaotu_N1.yaml  generalConfig.yaml  imr.json  libamd.so.2  libcamd.so.2  libcolamd.so.2  libf77blas.so.3  libg3logger.so.1.3.0-0  libgstapp-1.0.so.0  libgstaudio-1.0.so.0  libgstbase-1.0.so.0  libgstpbutils-1.0.so.0  libgstreamer-1.0.so.0  libgstriff-1.0.so.0  libgsttag-1.0.so.0  libgstvideo-1.0.so.0  libjpeg.so.9  libnanomsg.so.5  libopencv_calib3d.so.3.4  libopencv_features2d.so.3.4  libopencv_flann.so.3.4  libopencv_highgui.so.3.4  libopencv_videoio.so.3.4  slam_imp.yaml
